feat(ai): add skill download count tracking
- Add download_count column to ai_resource and ai_resource_version tables (MySQL/Derby/Oracle/PostgreSQL)
- Add SkillDownloadEvent and SkillDownloadCountManager for async event-driven counting
- Accumulate counts in memory with ConcurrentHashMap+AtomicLong, flush to DB every 10s
- Use atomic SQL (download_count = download_count + N) for cluster safety
- Publish events in downloadSkillVersion (admin path) and querySkill (client path)
- Expose downloadCount in admin detail/list API response
- Support orderBy=download_count in skill list query
- Fix AiGrpcResourceParserTest: remove deleted QuerySkillRequest references
- Fix AgentSpecUtilsPropertyTest: Java 8 compatibility (String.isBlank -> trim().isEmpty())
- Fix all SQL SELECT statements to include download_count column for RowMapper consistency